[build] Add a new --add-opens VM option required after the update of intellijVersion to 253.15821