@@ -170,7 +170,8 @@ object Common {
       //"com.intellij.dev".toPlugin,
 
       "org.jetbrains.kotlin".toPlugin
-    )
+    ),
+    intellijVMOptions ~= { _.withOption("--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED") }
   )
 
   def newPlainScalaProject(projectName: String, base: File): Project =
